# ml22_klein

./: pyproject.toml
dev/notebooks/: 02_convolutions.ipynb  07_excercises.ipynb  klad_sizes.ipynb  model.gin
models/CNN_3c3h_test/20221205-1805/: events.out.tfevents.1670263548.ML-RefVm-847530.22233.0  saved_config.gin
models/CNN_3c3h_test/20221205-1809/: events.out.tfevents.1670263759.ML-RefVm-847530.22233.1  saved_config.gin
models/CNN_3c3h_test/20221205-1813/: events.out.tfevents.1670263998.ML-RefVm-847530.22233.2  saved_config.gin
models/CNN_3c3h_test/20221205-1817/: events.out.tfevents.1670264237.ML-RefVm-847530.22233.3  saved_config.gin
models/CNN_3c3h_test/20221205-1821/: events.out.tfevents.1670264462.ML-RefVm-847530.22233.4  saved_config.gin
models/CNN_3c3h_test/20221205-1824/: events.out.tfevents.1670264692.ML-RefVm-847530.22233.5  saved_config.gin
models/CNN_3c3h_test/20221205-1841/: events.out.tfevents.1670265696.ML-RefVm-847530.23746.0
models/CNN_3c3h_test/20221205-1954/: events.out.tfevents.1670270088.ML-RefVm-847530.25880.0  saved_config.gin
models/filters/20221211-1521/: events.out.tfevents.1670772067.ML-RefVm-847530.6654.0
models/filters/20221211-1608/: events.out.tfevents.1670774899.ML-RefVm-847530.6654.1  saved_config.gin
models/filters/20221211-1610/: events.out.tfevents.1670775001.ML-RefVm-847530.6654.2
models/filters/20221211-1611/: events.out.tfevents.1670775073.ML-RefVm-847530.6654.3  events.out.tfevents.1670775119.ML-RefVm-847530.6654.4
src/models/: imagemodels copy.py  imagemodels.py
(+932 files in other folders)
